--- a/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
+++ b/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
@@ -6,6 +6,7 @@
     "EpisodeManagementUrl": "http://localhost:6006/api/CreateUpdateEpisode",
     "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant",
     "GetEpisodeReferenceDataServiceUrl": "http://localhost:7574/api/GetEpisodeReferenceData",
+    "GetAllOrganisationReferenceDataUrl": "http://localhost:6081/api/GetAllOrganisationReferenceData",
     "topicEndpoint": "https://sams-test-topic.uksouth-1.eventgrid.azure.net/api/events",
     "topicKey": "TOPIC_KEY"
   },
