feat: identify and process historical episode extracts  (#119)
* feat: update ReceiveData function to process historical episodes

* refactor: removed EventGrid

* refactor: Add Event Grid to ReceiveData function

* test: Update test file with EventGrid

* feat: add GetAllOrganisationReferenceData function

* feat: added GetOrganisationIdAsync method to OrganisationLkpRepository to retrieve OrganisationId by OrganisationCode

* feat: updated MapHistoricalEpisodeToEpisodeDto to be async and handle organisation ID retrieval

* refactor: create separate classes to reduce code size

* test: update unit test

* refactor: resolve sonarcloud issues

* fix: update ReceiveData function to process historical episodes correctly

* refactor: fix formatting issues

* refactor: rename endCodes to EndCodeToIdLookup and OrganisationIds to OrganisationCodeToIdLookup

* refactor: removed recursive call in ProcessHistoricalEpisodeDataAsync method

* test: update unit tests

* refactor: Removed unused method parameter 'name' in ProcessHistoricalEpisodeDataAsync method

* refactor: renamed dictionaries to be more descriptive

* refactor: add GetAllOrganisationReferenceDataUrl

* refactor: removed GetOrganisationIdAsync method

* refactor: Handle exceptions and logging in RetrieveReferenceDataAsync method

* refactor: Logging  exception with contextual information

* refactor: update exception

* refactor: fix sonarcloud issue

* refactor: update exception handling for RetrieveReferenceDataAsync method

* refactor: update GetOrganisationLkp method to GetOrganisationByCodeAsync for consistency

--- a/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
+++ b/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
@@ -1,11 +1,14 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "ASPNETCORE_ENVIRONMENT": "Development",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "EpisodeManagementUrl": "http://localhost:6006/api/CreateUpdateEpisode",
-    "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant"
+    "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant",
+    "GetEpisodeReferenceDataServiceUrl": "http://localhost:7574/api/GetEpisodeReferenceData",
+    "GetAllOrganisationReferenceDataUrl": "http://localhost:6081/api/GetAllOrganisationReferenceData",
+    "topicEndpoint": "https://sams-test-topic.uksouth-1.eventgrid.azure.net/api/events",
+    "topicKey": "TOPIC_KEY"
   },
   "Host": {
     "LocalHttpPort": 7072
