--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -211,6 +211,7 @@ services:
       - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
       - topicEndpoint=${EVENTGRID_URL}
       - topicKey=${EVENTGRID_KEY}
+      - CheckParticipantExistsUrl=http://127.0.0.1:6061/api/CheckParticipantExists
 
   get-episode:
     container_name: get-episode
@@ -255,6 +256,7 @@ services:
       - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
       - topicEndpoint=${EVENTGRID_URL}
       - topicKey=${EVENTGRID_KEY}
+      - CheckParticipantExistsUrl=http://127.0.0.1:6061/api/CheckParticipantExists
 
   # Episode Integration Service
   receive-data:
