docs: remove unused

--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@
 # Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
 AZURITE_CONNECTION_STRING=""
 AZURITE_CONTAINER_NAME="inbound" #Azure blob container name
-AZURITE_CREATE_CONTAINER_NAMES="inbound,outbound,inbound-poison" # Comma-separated list of Azure blob container names
+AZURITE_CREATE_CONTAINER_NAMES="inbound,inbound-poison" # Comma-separated list of Azure blob container names
 
 # Database name and SA password
 DB_CONNECTION="" # sql-database for mac, 127.0.0.1 for windows
