--- a/compose.yaml
+++ b/compose.yaml
@@ -240,7 +240,7 @@ services:
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
       - topicEndpoint=${EVENTGRID_URL}
       - topicKey=${EVENTGRID_KEY}
-      - CheckParticipantExistsUrl=http://get-participant:6061/api/CheckParticipantExists
+      - CheckParticipantExistsUrl=http://get-participant:6061/api/GetParticipant
 
   get-episode:
     container_name: get-episode
@@ -291,7 +291,7 @@ services:
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
       - topicEndpoint=${EVENTGRID_URL}
       - topicKey=${EVENTGRID_KEY}
-      - CheckParticipantExistsUrl=http://get-participant:6061/api/CheckParticipantExists
+      - CheckParticipantExistsUrl=http://get-participant:6061/api/GetParticipant
 
   # Episode Integration Service
   receive-data:
