--- a/.azuredevops/pipelines/cd-infrastructure-dev-audit.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-dev-audit.yaml
@@ -14,7 +14,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: main
+      ref: 06f902ec9a1a6284533157e1ba04bc7bac28cfd5
       endpoint: NHSDigital
 
 variables:
