feat: update retrieve-mesh-file function to send invalid files to inbound-poison (#129)
* feat: add ibound-poison logic and associated updates

* docs: prettier

* tests: update unit tests

* tests: update unit tests

* tests: additional  unit tests

* docs: fix typo

* docs: tidy code

* feat: improved logic readability

* docs: update logging

* docs: remove unused

* feat: container poision configuration

* refactor: parameterised mesh to blob transfer logic

* tests: refactor assertions since refactor

* tests: test refinement

* tests: test refinement

--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -29,6 +29,7 @@ services:
     environment:
       - AZURITE_CONNECTION_STRING=${AZURITE_CONNECTION_STRING}
       - AZURITE_CONTAINER_NAME=${AZURITE_CONTAINER_NAME}
+      - AZURITE_POISON_CONTAINER_NAME=${AZURITE_POISON_CONTAINER_NAME}
 
   sql-database:
     container_name: sql-database
@@ -339,6 +340,7 @@ services:
       - MeshApiBaseUrl=${MESHAPIBASEURL}
       - BSSMailBox=${BSSMAILBOX}
       - BSSContainerName=${AZURITE_CONTAINER_NAME}
+      - PoisonContainerName=${AZURITE_POISON_CONTAINER_NAME}
       - MeshPassword=${MESHPASSWORD}
       - MeshSharedKey=${MESHSHAREDKEY}
       - MeshKeyPassphrase=${MESHKEYPASSPHRASE}
