--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -102,7 +102,8 @@ jobs:
     secrets: inherit
   build-image-stage: # Recommended maximum execution time is 3 minutes
     name: Image build stage
-    needs: [metadata, commit-stage, test-stage]
+    # needs: [metadata, commit-stage, test-stage]
+    needs: [metadata]
     uses: NHSDigital/dtos-devops-templates/.github/workflows/stage-3-build-images.yaml@main
     if: needs.metadata.outputs.does_pull_request_exist == 'true' || github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened'))
     with:
