--- a/compose.yaml
+++ b/compose.yaml
@@ -62,7 +62,7 @@ services:
     restart: on-failure
     build:
       context: ./scripts/
-      dockerfile: ./BaseImage/Dockerfile
+      dockerfile: ./database/Dockerfile
     networks:
       - app-network
 
@@ -74,22 +74,18 @@ services:
       dockerfile: ./BaseImage/Dockerfile
     networks:
       - app-network
-    ports:
-      - "6062:6062"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
-      - ASPNETCORE_URLS=http://*:6062
-      - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-
 
   # BI Analytics Data Service
   create-ps-episode-data:
+    # image: service-insights-base-image:latest
     container_name: create-ps-episode-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/CreateParticipantScreeningEpisode/Dockerfile
+    image: create-ps-episode-data:latest
     networks:
       - app-network
     ports:
@@ -103,6 +99,8 @@ services:
   create-ps-profile-data:
     container_name: create-ps-profile-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/CreateParticipantScreeningProfile/Dockerfile
@@ -119,6 +117,8 @@ services:
   get-ps-profile-data:
     container_name: get-ps-profile-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/GetParticipantScreeningProfileData/Dockerfile
@@ -135,6 +135,8 @@ services:
   get-ps-episode-data:
     container_name: get-ps-episode-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/GetParticipantScreeningEpisodeData/Dockerfile
@@ -152,6 +154,8 @@ services:
   create-ps-episode:
     container_name: create-ps-episode
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsManagementService/CreateParticipantScreeningEpisode/Dockerfile
@@ -171,6 +175,8 @@ services:
   create-ps-profile:
     container_name: create-ps-profile
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsManagementService/CreateParticipantScreeningProfile/Dockerfile
@@ -189,6 +195,8 @@ services:
   get-ps-profile:
     container_name: get-ps-profile
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsManagementService/GetParticipantScreeningProfile/Dockerfile
@@ -205,6 +213,8 @@ services:
   get-ps-episode:
     container_name: get-ps-episode
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsManagementService/GetParticipantScreeningEpisode/Dockerfile
@@ -222,6 +232,8 @@ services:
   get-demographics-data:
     container_name: get-demographics-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./DemographicsService/GetDemographicsData/Dockerfile
@@ -237,6 +249,8 @@ services:
   create-episode:
     container_name: create-episode
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/CreateEpisode/Dockerfile
@@ -254,6 +268,8 @@ services:
   get-episode:
     container_name: get-episode
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/GetEpisode/Dockerfile
@@ -270,6 +286,8 @@ services:
   retrieve-episode-ref-data:
     container_name: retrieve-episode-ref-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/RetrieveEpisodeReferenceData/Dockerfile
@@ -286,6 +304,8 @@ services:
   update-episode:
     container_name: update-episode
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/UpdateEpisode/Dockerfile
@@ -305,6 +325,8 @@ services:
   receive-data:
     container_name: receive-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ReceiveData/Dockerfile
@@ -330,6 +352,8 @@ services:
   create-update-episode:
     container_name: create-update-episode
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/CreateUpdateEpisode/Dockerfile
@@ -348,6 +372,8 @@ services:
   get-episode-mgmt:
     container_name: get-episode-mgmt
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/GetEpisode/Dockerfile
@@ -364,6 +390,8 @@ services:
   get-episode-ref-data:
     container_name: get-episode-ref-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/GetEpisodeReferenceData/Dockerfile
@@ -386,6 +414,7 @@ services:
       dockerfile: ./MeshIntegrationService/RetrieveMeshFile/Dockerfile
     depends_on:
       - azurite
+      - base-image
     networks:
       - app-network
     ports:
@@ -407,6 +436,8 @@ services:
   get-participant:
     container_name: get-participant
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
@@ -422,6 +453,8 @@ services:
   update-participant:
     container_name: update-participant
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/UpdateParticipant/Dockerfile
@@ -438,6 +471,8 @@ services:
   get-organisation-data:
     container_name: get-organisation-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./ReferenceDataService/GetReferenceData/Dockerfile
@@ -454,6 +489,8 @@ services:
   get-screening-data:
     container_name: get-screening-data
     restart: always
+    depends_on:
+      - base-image
     build:
       context: ./src/
       dockerfile: ./ReferenceDataService/GetScreeningData/Dockerfile
