--- a/src/BIAnalyticsDataService/CreateParticipantScreeningEpisode/Dockerfile
+++ b/src/BIAnalyticsDataService/CreateParticipantScreeningEpisode/Dockerfile
@@ -1,17 +1,20 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS installer-env
 
-RUN apt-get update && apt-get upgrade -y && apt-get clean && rm -rf /var/lib/apt/lists/*
-
+# Copy in your .csproj and source files
 COPY ./BIAnalyticsDataService/CreateParticipantScreeningEpisode /src/dotnet-function-app
 COPY ./Shared /Shared
+
+# Publish to /home/site/wwwroot
 RUN cd /src/dotnet-function-app && \
     mkdir -p /home/site/wwwroot && \
     dotnet publish *.csproj --output /home/site/wwwroot
 
-# To enable ssh & remote debugging on app service change the base image to the one below
-# FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
-FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
-ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
-    AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
-COPY --from=installer-env ["/home/site/wwwroot", "/home/site/wwwroot"]
+# # Instead of pulling from the MS base, we use your custom base image
+# #FROM myregistry.azurecr.io/dotnet-function-base:8.0
+FROM localhost:5000/service-insights-base-image:latest
+
+# Copy the compiled output from the installer-env stage
+COPY --from=installer-env /home/site/wwwroot /home/site/wwwroot
+
+
