--- a/src/EpisodeManagementService/CreateUpdateEpisode/Dockerfile
+++ b/src/EpisodeManagementService/CreateUpdateEpisode/Dockerfile
@@ -1,7 +1,5 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS installer-env
 
-RUN apt-get update && apt-get upgrade -y && apt-get clean && rm -rf /var/lib/apt/lists/*
-
 COPY ./EpisodeManagementService/CreateUpdateEpisode /src/dotnet-function-app
 COPY ./Shared /Shared
 RUN cd /src/dotnet-function-app && \
@@ -9,7 +7,8 @@ RUN cd /src/dotnet-function-app && \
     dotnet publish *.csproj --output /home/site/wwwroot
 
 # To enable ssh & remote debugging on app service change the base image to the one below
-# FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
+# # FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
+FROM localhost:5000/service-insights-base-image:latest
 FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
