--- a/src/ParticipantManagementService/GetParticipant/Dockerfile
+++ b/src/ParticipantManagementService/GetParticipant/Dockerfile
@@ -1,4 +1,3 @@
-#FROM base-image:latest as installer-env
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS installer-env
 
 COPY ./ParticipantManagementService/GetParticipant /src/dotnet-function-app
@@ -8,9 +7,8 @@ RUN cd /src/dotnet-function-app && \
     dotnet publish *.csproj --output /home/site/wwwroot
 
 # To enable ssh & remote debugging on app service change the base image to the one below
-# # FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
-FROM localhost:5000/service-insights-base-image:latest
-#FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
+# FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
+FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
