--- a/.github/workflows/cicd-1-pull-request.yaml
+++ b/.github/workflows/cicd-1-pull-request.yaml
@@ -104,8 +104,8 @@ jobs:
     name: Image build stage
     # needs: [metadata, commit-stage, test-stage]
     needs: [metadata]
-    # uses: NHSDigital/dtos-devops-templates/.github/workflows/stage-3-build-images.yaml@feat/dtoss-7138-Improve-Docker-Image-Security-by-Analysing-GitHub-Workflow-Vulnerability-Repo
-    uses: NHSDigital/dtos-devops-templates/.github/workflows/stage-3-build-images.yaml@main
+    uses: NHSDigital/dtos-devops-templates/.github/workflows/stage-3-build-images.yaml@feat/dtoss-7138-Improve-Docker-Image-Security-by-Analysing-GitHub-Workflow-Vulnerability-Report
+    # uses: NHSDigital/dtos-devops-templates/.github/workflows/stage-3-build-images.yaml@main
     if: needs.metadata.outputs.does_pull_request_exist == 'true' || github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened'))
     with:
       docker_compose_file: ./compose.yaml
