--- a/src/MeshIntegrationService/RetrieveMeshFile/Dockerfile
+++ b/src/MeshIntegrationService/RetrieveMeshFile/Dockerfile
@@ -1,5 +1,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS installer-env
 
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    rm -rf /var/lib/apt/lists/*
+
 COPY ./MeshIntegrationService/RetrieveMeshFile /src/dotnet-function-app
 COPY ./Shared /Shared
 RUN cd /src/dotnet-function-app && \
@@ -9,6 +13,11 @@ RUN cd /src/dotnet-function-app && \
 # To enable ssh & remote debugging on app service change the base image to the one below
 # FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
 FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    rm -rf /var/lib/apt/lists/*
+
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
