--- a/src/EpisodeDataService/CreateEpisode/local.settings.json.template
+++ b/src/EpisodeDataService/CreateEpisode/local.settings.json.template
@@ -5,9 +5,9 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "ServiceInsightsDbConnectionString": "YOUR_CONNECTION_STRING",
-    "topicEndpoint": "https://sams-test-topic.uksouth-1.eventgrid.azure.net/api/events",
     "GetOrganisationIdByCodeUrl":"http://localhost:6081/api/GetOrganisationIdByCode",
-    "topicKey": "TOPIC_KEY",
+    "topicEndpoint1": "TOPIC_ENDPOINT1",
+    "topicKey1": "TOPIC_KEY1",
     "CheckParticipantExistsUrl": "http://localhost:6061/api/GetParticipant"
   },
   "Host": {
