--- a/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
@@ -19,7 +19,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: 06f902ec9a1a6284533157e1ba04bc7bac28cfd5
+      ref: feat/Add-event-grid-hub
       endpoint: NHSDigital
 
 variables:
