--- a/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
+++ b/src/EpisodeIntegrationService/ReceiveData/local.settings.json.template
@@ -7,10 +7,10 @@
     "ParticipantManagementUrl": "http://localhost:7074/api/UpdateParticipant",
     "GetEpisodeReferenceDataServiceUrl": "http://localhost:7574/api/GetEpisodeReferenceData",
     "GetAllOrganisationReferenceDataUrl": "http://localhost:6081/api/GetAllOrganisationReferenceData",
-    "topicEndpoint1": "TOPIC_ENDPOINT1",
-    "topicKey1": "TOPIC_KEY1",
-    "topicEndpoint2": "TOPIC_ENDPOINT2",
-    "topicKey2": "TOPIC_KEY2"
+    "topicEndpoint1": "PUBLISH_EPISODE_DATA_TO_THIS_ENDPOINT",
+    "topicKey1": "TOPIC_KEY_FOR_topicEndpoint1",
+    "topicEndpoint2": "PUBLISH_PARTICIPANT_DATA_TO_THIS_ENDPOINT",
+    "topicKey2": "TOPIC_KEY_FOR_topicEndpoint2"
   },
   "Host": {
     "LocalHttpPort": 7072
