fix: update codebase to use different topicEndpoints (#149)
* fix:update codebase to use different topicEndpoints

* docs: update local settings templates

* refactor: update code to use a single interface and class to publish events

* tests: update unit tests to use a single mock instance for publishing events

* docs: add descriptive variable values

* refactor: updated EventGridPublisherClient class

* refactor: update AddEventGridClient method to reduce complexity

* refactor: update code to reduce complexity

* docs: renamed topicKey and topicEndpoints

* refactor: simplify CreateEventGridPublisherClient method and consolidate client creation logic

--- a/src/EpisodeDataService/CreateEpisode/local.settings.json.template
+++ b/src/EpisodeDataService/CreateEpisode/local.settings.json.template
@@ -5,9 +5,9 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "ServiceInsightsDbConnectionString": "YOUR_CONNECTION_STRING",
-    "topicEndpoint": "https://sams-test-topic.uksouth-1.eventgrid.azure.net/api/events",
     "GetOrganisationIdByCodeUrl":"http://localhost:6081/api/GetOrganisationIdByCode",
-    "topicKey": "TOPIC_KEY",
+    "topicEndpoint1": "EPISODE_TOPIC_ENDPOINT",
+    "topicKey1": "EPISODE_TOPIC_KEY",
     "CheckParticipantExistsUrl": "http://localhost:6061/api/GetParticipant"
   },
   "Host": {
