--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,7 @@ PASSWORD="" # Enter a db password here with 8 chars, a num/ special character, a
 # Mesh mailbox settings
 MESHPASSWORD="" #Password for the MESH Mailbox, for local sandbox this can be will be password, for production and integration This will be provided by the project.
 MESHSHAREDKEY="" #Shared Key for the MESH Mailbox, For local sandbox this is set in the Docker-Compose.yml file, production and integration This will be provided by the project.
+MESHKEYNAME="" #Name of the key for authenticating against the MESH Mailbox
 MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against the MESH Mailbox, for the local sandbox this is defined when creating the private key and certificate, production and integration this will be issues when provisining the environment.
 MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL host.docker.internal for mac and localhost for windows
 BSSMAILBOX=X26ABC1 #Mesh mailbox name
