--- a/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-nft-core.yaml
@@ -19,7 +19,7 @@ resources:
     - repository: dtos-devops-templates
       type: github
       name: NHSDigital/dtos-devops-templates
-      ref: feat/Add-event-grid-hub
+      ref: 82d77463eb20764a0d8c443322bd400bca978444
       endpoint: NHSDigital
 
 variables:
