--- a/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
+++ b/src/MeshIntegrationService/RetrieveMeshFile/local.settings.json.template
@@ -9,6 +9,7 @@
     "BSSContainerName": "inbound",
     "PoisonContainerName": "inbound-poison",
     "MeshPassword": "password",
+    "MeshKeyName": "key.pfx",
     "MeshSharedKey": "TestKey",
     "MeshKeyPassphrase":"test123",
     "TimerExpression":"*/5 * * * *"
