--- a/compose-win.yaml
+++ b/compose-win.yaml
@@ -210,9 +210,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://*:6007
       - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-      - topicEndpoint=${EVENTGRID_URL}
-      - topicKey=${EVENTGRID_KEY}
+      - topicEndpoint1=${EVENTGRID_URL}
+      - topicKey1=${EVENTGRID_KEY}
       - CheckParticipantExistsUrl=http://127.0.0.1:6061/api/GetParticipant
+      - GetOrganisationIdByCodeUrl=http://localhost:6081/api/GetOrganisationIdByCode
 
   get-episode:
     container_name: get-episode
