--- a/compose.yaml
+++ b/compose.yaml
@@ -239,9 +239,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://*:6007
       - ServiceInsightsDbConnectionString=Server=${DB_CONNECTION},1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
-      - topicEndpoint=${EVENTGRID_URL}
-      - topicKey=${EVENTGRID_KEY}
+      - topicEndpoint1=${EVENTGRID_URL}
+      - topicKey1=${EVENTGRID_KEY}
       - CheckParticipantExistsUrl=http://get-participant:6061/api/GetParticipant
+      - GetOrganisationIdByCodeUrl=http://get-organisation-data:6081/api/GetOrganisationIdByCode
 
   get-episode:
     container_name: get-episode
