--- a/.env.template
+++ b/.env.template
@@ -1,23 +1,25 @@
 # Environment variables for use in docker compose
 
-# Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
-AZURITE_CONNECTION_STRING=""
-AZURITE_CONTAINER_NAME="inbound" #Azure blob container name for valid files
-AZURITE_POISON_CONTAINER_NAME="inbound-poison" #Azure blob container name for invalid files
+# Azure storage container settings
+AZURITE_CONNECTION_STRING="" # Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
+AZURITE_CONTAINER_NAME="inbound" # Azure blob container name for valid files
+AZURITE_POISON_CONTAINER_NAME="inbound-poison" # Azure blob container name for invalid files
 
-# Database name and SA password
-DB_CONNECTION="" # sql-database for mac, 127.0.0.1 for windows
-DB_NAME=ServiceInsightsDB #Database Name for the Azure SQL database
+# Azure Database settings
+DB_CONNECTION="" # Enter sql-database for mac, 127.0.0.1 for windows
+DB_NAME=ServiceInsightsDB # Database Name for the Azure SQL database
 PASSWORD="" # Enter a db password here with 8 chars, a num/ special character, and a capital letter
 
 # Mesh mailbox settings
-MESHPASSWORD="" #Password for the MESH Mailbox, for local sandbox this can be will be password, for production and integration This will be provided by the project.
-MESHSHAREDKEY="" #Shared Key for the MESH Mailbox, For local sandbox this is set in the Docker-Compose.yml file, production and integration This will be provided by the project.
-MESHKEYNAME="" #Name of the key for authenticating against the MESH Mailbox
-MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against the MESH Mailbox, for the local sandbox this is defined when creating the private key and certificate, production and integration this will be issues when provisining the environment.
-MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL host.docker.internal for mac and localhost for windows
-BSSMAILBOX=X26ABC1 #Mesh mailbox name
+MESHPASSWORD="" # Password for the MESH Mailbox
+MESHSHAREDKEY="" # Shared Key for the MESH Mailbox
+MESHKEYNAME="" # Name of the key for authenticating against the MESH Mailbox
+MESHKEYPASSPHRASE="" # Passphrase for the private key for authenticating against the MESH Mailbox
+MESHAPIBASEURL=http://localhost:8700/messageexchange # Mesh mailbox URL host.docker.internal for mac and localhost for windows
+BSSMAILBOX=X26ABC1 # Mesh mailbox name
 
-# EventGrid
-EVENTGRID_URL="https://sams-test-topic.uksouth-1.eventgrid.azure.net/api/events"
-EVENTGRID_KEY=""
+# Azure EventGrid settings
+EPISODE_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for Episodes
+EPISODE_TOPIC_KEY="" # Event Grid Topic Key for Episodes
+PARTICIPANT_TOPIC_ENDPOINT="" # Event Grid Topic Endpoint for Participants
+PARTICIPANT_TOPIC_KEY="" #  Event Grid Topic Key for Participants
