test(*): base automation framework

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -1,3 +1,16 @@
 # SEE: https://github.com/gitleaks/gitleaks/blob/master/README.md#gitleaksignore
 
 cd9c0efec38c5d63053dd865e5d4e207c0760d91:docs/guides/Perform_static_analysis.md:generic-api-key:37
+
+# Reqnroll: auto-generated version numbers for two commits
+56fac0623cf8c4d6d37a7b4fe485b886ecdb8ab0:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:4
+56fac0623cf8c4d6d37a7b4fe485b886ecdb8ab0:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:5
+56fac0623cf8c4d6d37a7b4fe485b886ecdb8ab0:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:20
+
+6db59f82affa41635d2d70e83bdfecd62a7a9ace:tests/SmokeTests/dtos-service-insights-tests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:4
+6db59f82affa41635d2d70e83bdfecd62a7a9ace:tests/SmokeTests/dtos-service-insights-tests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:5
+6db59f82affa41635d2d70e83bdfecd62a7a9ace:tests/SmokeTests/dtos-service-insights-tests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:20
+
+54585a234ad83ac2a70e2dc8a2c681151c199e6f:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:4
+54585a234ad83ac2a70e2dc8a2c681151c199e6f:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:5
+54585a234ad83ac2a70e2dc8a2c681151c199e6f:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:20
