fix(*): ignore four character version number in gitleaks

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -10,3 +10,7 @@ cd9c0efec38c5d63053dd865e5d4e207c0760d91:docs/guides/Perform_static_analysis.md:
 6db59f82affa41635d2d70e83bdfecd62a7a9ace:tests/SmokeTests/dtos-service-insights-tests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:4
 6db59f82affa41635d2d70e83bdfecd62a7a9ace:tests/SmokeTests/dtos-service-insights-tests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:5
 6db59f82affa41635d2d70e83bdfecd62a7a9ace:tests/SmokeTests/dtos-service-insights-tests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:20
+
+54585a234ad83ac2a70e2dc8a2c681151c199e6f:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:4
+54585a234ad83ac2a70e2dc8a2c681151c199e6f:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:5
+54585a234ad83ac2a70e2dc8a2c681151c199e6f:tests/SmokeTests/dtos-service-insights-tests/Features/EpisodeDataService.feature.cs:ipv4:20
